After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 681720 - ewsclient: Fix breakage because of libxml2 API breakage
ewsclient: Fix breakage because of libxml2 API breakage
Status: RESOLVED FIXED
Product: gnome-online-accounts
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Online Accounts maintainer(s)
GNOME Online Accounts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-08-13 06:22 UTC by Stef Walter
Modified: 2012-08-13 23:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ewsclient: Fix breakage because of libxml2 API breakage (1.79 KB, patch)
2012-08-13 06:22 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2012-08-13 06:22:00 UTC
Recently libxml2 broke API. See:

https://mail.gnome.org/archives/desktop-devel-list/2012-August/msg00004.html

The attached patch fixes the build, and works with both old
and new libxml2 versions. I know #ifdefs suck, and the solution
is far from elegant, but it looks like this is the recommended
way to fix the issue.
Comment 1 Stef Walter 2012-08-13 06:22:03 UTC
Created attachment 220964 [details] [review]
ewsclient: Fix breakage because of libxml2 API breakage

 * libxml2 introduced some API breakage recently.
 * Fix the build so it works with both old and new versions
   of libxml2.
Comment 2 Debarshi Ray 2012-08-13 23:33:49 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.