ewsclient: Fix breakage because of libxml2 API breakage

* libxml2 introduced some API breakage recently.
 * Fix the build so it works with both old and new versions
   of libxml2.

https://bugzilla.gnome.org/show_bug.cgi?id=681720